Fixed m glow, menu arrow visibility et al.

--- a/canvas/static/main.css
+++ b/canvas/static/main.css
@@ -147,6 +147,7 @@ a:link { text-decoration: none; }
 	color: #808080;
 	font-weight: bold;
 	cursor: pointer;
+	background-color: white;
 }
 
 #filterbox div.left  button {
